﻿2006-12-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png: Removed some unused legacy tiles and 
	added variant tiles for the cliffs.

2006-12-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/engine.h, src/engine.cpp: Removed the rather
	useless remaining draw function from the engine class.
	* src/being.cpp, src/being.h: Fixed an issue with fading out damage
	texts (they were sometimes fully opaque at the end of fading out).

2006-12-12  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.
	* src/gui/updatewindow.cpp, src/gui/updatewindow.h, src/main.cpp:
	Added Adler32 checksum for updates.
	* src/net/playerhandler.cpp: Fixed crash when selecting an item after
	death.
	* data/items.xml: Fixed defense values for sweaters.
	* src/net/playerhandler.cpp: Hide all NPC dialogs after death.

2006-12-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/animatedsprite.h, src/CMakeLists.txt, src/animatedsprite.cpp,
	src/resources/action.h, src/resources/animation.h,
	src/resources/spritedef.cpp, src/resources/action.cpp,
	src/resources/animation.cpp, src/resources/spritedef.h: Moved
	Action, Animation and Frame (renamed from AnimationPhase) classes into
	the resources directory, since they are part of the SpriteDef class.
	* src/CMakeLists.txt, src/utils/base64.cpp, src/utils/base64.h,
	src/Makefile.am, src/resources/mapreader.cpp: Moved base64 module into
	utils directory.
	* src/engine.cpp, src/npc.cpp: Cleaned up some unused stuff.

2006-12-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/sfx/bat-dying1.ogg, data/sfx/bat-hit1.ogg,
	data/sfx/bow_shoot_1.ogg, data/sfx/fire-goblin-hit1.ogg
	data/sfx/fire-goblin-hit2.ogg, data/sfx/fire-goblin-miss1.ogg,
	data/sfx/fist-swish.ogg, data/sfx/flower-hit1.ogg,
	data/sfx/flower-hit2.ogg, data/sfx/flower-miss1.ogg,
	data/sfx/fluffy-hit1.ogg, data/sfx/fluffy-hit2.ogg,
	data/sfx/fluffy-hit3.ogg, data/sfx/fluffy-hurt1.ogg,